# aruco-sim-test

./: README.md
ast_controller/: .gitignore  CMakeLists.txt  package.xml
ast_controller/launch/: analyze.launch  main_script.launch
ast_controller/scripts/: analyze_data.py  main_script.py
ast_detector/: CMakeLists.txt  package.xml
ast_detector/include/ast_detector/: ast_detector.h
ast_detector/launch/: marker_detector.launch
ast_detector/src/: ast_detector.cpp  main.cpp
ast_msgs/: CMakeLists.txt  package.xml
ast_msgs/msg/: MarkerPose.msg  Markers.msg
ast_world/: CMakeLists.txt  package.xml
ast_world/launch/: basic_world.launch  sim_cv.launch
ast_world/sdf/hd_camera/: model.config  model.sdf
ast_world/sdf/marker4/: model.config  model.sdf
ast_world/sdf/marker4/materials/scripts/: marker4.material
ast_world/sdf/marker5/: model.config  model.sdf
ast_world/sdf/marker5/materials/scripts/: marker5.material
ast_world/sdf/marker6/: model.config  model.sdf
ast_world/sdf/marker6/materials/scripts/: marker6.material
ast_world/worlds/: cv-markers.world
